--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@htmlacademy/editorconfig-cli": "0.1.x",
     "autoprefixer": "6.7.x",
     "browser-sync": "2.18.8",
-    "gulp": "3.9.1",
-    "gulp-less": "3.3.0",
-    "gulp-plumber": "1.1.0",
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.3.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "6.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-svgmin": "^1.2.3",
