--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "sedona",
   "version": "0.1.0",
   "private": true,
-  "description": "Личный проект «Седона» от HTML Academy",
+  "description": "Личный проект «Седона» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "0.1.x",
     "autoprefixer": "6.7.x",
     "browser-sync": "2.18.8",
-    "gulp": "^3.9.1",
-    "gulp-less": "^3.3.0",
-    "gulp-plumber": "^1.1.0",
+    "css-mqpacker": "^5.0.1",
+    "gulp": "3.9.1",
+    "gulp-csso": "^3.0.0",
+    "gulp-imagemin": "^3.2.0",
+    "gulp-less": "3.3.0",
+    "gulp-plumber": "1.1.0",
     "gulp-postcss": "6.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-svgmin": "^1.2.3",
